@@ -6,9 +6,11 @@ plugins {
 // tag::external-task-build[]
 }
 
+// tag::gradle-api-dependencies[]
 dependencies {
     implementation(gradleApi())
 }
+// end::gradle-api-dependencies[]
 // end::external-task-build[]
 
 repositories {
@@ -33,4 +35,18 @@ publishing {
             from(components["java"])
         }
     }
+}
+
+// Needed when using ProjectBuilder
+class AddOpensArgProvider(private val test: Test) : CommandLineArgumentProvider {
+    override fun asArguments() : Iterable<String> {
+        return if (test.javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)) {
+            listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        } else {
+            emptyList()
+        }
+    }
+}
+tasks.withType<Test>().configureEach {
+    jvmArgumentProviders.add(AddOpensArgProvider(this))
 }
